# Linux-Update-Checker

./: .env.example  .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  README.md  build.sh  pyproject.toml  run.sh
src/linux_update_checker/: __init__.py  constants.py  logger.py  models.py
src/linux_update_checker/managers/: __init__.py  apt.py  base.py  dnf.py  shell.py
src/linux_update_checker/messenger/: discord.py
tests/: test_logger.py
tests/managers/: test_shell.py
tests/messenger/: test_discord.py
