[project]
name = "linux-update-checker"
version = "0.1.0"
description = "Check for updates in linux and send a notification"
readme = "README.md"
authors = [
    { name = "Marco Ramos", email = "linux_update_checker@marcoramos.me" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
linux-update-checker = "linux_update_checker:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = "--cov=linux_update_checker --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["my_project"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60
